--- a/style/index.css
+++ b/style/index.css
@@ -4,3 +4,9 @@ body {
   color: black;
   background-color: white;
 }
+
+@media only screen and (max-width: 300px) {
+  #complemento-oculto {
+    display: none;
+  }
+}
